--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/sexagesimal": "^1.2.0",
+    "install": "^0.13.0",
+    "npm": "^6.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-map-gl": "^5.0.12",
     "react-scripts": "3.2.0"
   },
   "scripts": {
