--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "install": "^0.13.0",
     "lodash.get": "^4.4.2",
     "luxon": "^1.19.3",
+    "netlify-lambda": "^1.6.3",
     "npm": "^6.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
