--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@mapbox/sexagesimal": "^1.2.0",
     "install": "^0.13.0",
-    "lodash.get": "^4.4.2",
     "luxon": "^1.19.3",
     "netlify-lambda": "^1.6.3",
     "npm": "^6.12.0",
@@ -14,11 +13,11 @@
     "react-map-gl": "^5.0.12",
     "react-scripts": "3.2.0",
     "recharts": "^1.8.3",
-    "request": "^2.88.0",
-    "xml2js": "^0.4.22"
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:lambda": "netlify-lambda serve src/lambda",
     "prod": "npm run build:app; npm run build:lambda",
     "build:app": "react-scripts build; npm run build:lambda",
     "build:lambda": "netlify-lambda build src/lambda",
@@ -39,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
